--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,7 @@
     "[java]": {
         "editor.defaultFormatter": "josevseb.google-java-format-for-vs-code",
     },
+    "cSpell.words": [
+      "Morra"
+    ],
 }
